# migration_agent

./: .gitignore  README.md  agents.py  checkpoint.py  main.py  migration_tools.py  pyproject.toml  rate_limiter.py  tasks.py
api/: index.py
config/: settings.py
legacy_sample/LegacyInventory/: Default.aspx  Default.aspx.cs  Global.asax  Global.asax.cs  LegacyInventory.csproj  Site.Master  Site.Master.cs  Web.config  packages.config
legacy_sample/LegacyInventory/Categories/: Create.aspx  Create.aspx.cs  Delete.aspx  Delete.aspx.cs  Edit.aspx  Edit.aspx.cs  List.aspx  List.aspx.cs
legacy_sample/LegacyInventory/Data/: Database.cs  DatabaseInitializer.cs  InventoryDbContext.cs
legacy_sample/LegacyInventory/Models/: Category.cs  Product.cs
legacy_sample/LegacyInventory/Products/: Create.aspx  Create.aspx.cs  Delete.aspx  Delete.aspx.cs  Edit.aspx  Edit.aspx.cs  List.aspx  List.aspx.cs
legacy_sample/LegacyInventory/Properties/: AssemblyInfo.cs
output/.checkpoints/: analyze.md  analyze.meta.json  migrate.md  migrate.meta.json  report.meta.json  review.md  review.meta.json  test.md  test.meta.json
output/MigratedApp/: MIGRATION_REPORT.md
tests/: test_agents.py  test_config.py  test_tools.py
